feat: habilita CRUD de categorías personales