@@ -1,7 +1,7 @@
 package org.adultofuncional.main.finances.application.usecase.category;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import org.adultofuncional.main.finances.application.dto.category.CategoryFilterRequest;
 import org.adultofuncional.main.finances.application.dto.category.CategoryResponse;
@@ -14,9 +14,8 @@ import org.springframework.transaction.annotation.Transactional;
  * Caso de uso: Listar categorías financieras con filtrado opcional por tipo.
  *
  * <p>
- * Recupera todas las categorías desde el repositorio y aplica un filtro en
- * memoria si se especifica un {@link CategoryFilterRequest} con un tipo
- * concreto. Retorna la lista de {@link CategoryResponse} correspondiente.
+ * Recupera en SQL el catálogo SYSTEM y las categorías PERSONAL de la cuenta,
+ * con filtro opcional por módulo.
  *
  * @author Miguel Angel Blandon Montes
  * @since 0.0.1
@@ -40,19 +39,17 @@ public class ListCategoriesUseCase {
    * @return Lista de {@link CategoryResponse} (vacía si no hay coincidencias).
    */
   @Transactional(readOnly = true)
-  public List<CategoryResponse> execute(CategoryFilterRequest filter) {
-    List<Category> categories = categoryRepository.findAll();
-    if (filter != null && filter.getType() != null) {
-      categories = categories.stream()
-          .filter(c -> c.getType() == filter.getType())
-          .collect(Collectors.toList());
-    }
+  public List<CategoryResponse> execute(UUID accountId, CategoryFilterRequest filter) {
+    List<Category> categories = categoryRepository.findAllAccessible(
+        accountId,
+        filter == null ? null : filter.getType());
     return categories.stream()
         .map(c -> CategoryResponse.builder()
             .id(c.getId())
             .name(c.getName())
             .type(c.getType())
+            .scope(c.getScope())
             .build())
-        .collect(Collectors.toList());
+        .toList();
   }
 }
